Implemented user registration, authentication and authorization using JWT. Made /locations requests using roles. Updated the architecture.
